# flutter_openssl_binaries

./: .metadata  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/flutter_openssl_binaries/: FlutterOpensslBinariesPlugin.kt
android/src/test/kotlin/com/example/flutter_openssl_binaries/: FlutterOpensslBinariesPluginTest.kt
linux/: CMakeLists.txt
